Correct spelling of 'vert-align' to 'vertical-align' in custom stylesheet and remove unnecessary height and max-width properties from toast stylesheet for cleaner design.

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -23,7 +23,7 @@ body {
 }
 
 .share-label {
-  vert-align: middle;
+  vertical-align: middle;
   margin-left: 10px;
 }
 
